# uv-mono-sample

./: Dockerfile  Dockerfile.volume  docker-compose.yml  pyproject.toml
scripts/: build.sh
src/: server.py
